--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@tsparticles/engine": "^3.8.1",
+		"@tsparticles/react": "^3.0.0",
+		"@tsparticles/slim": "^3.8.1",
 		"clsx": "^2.1.1",
 		"eslint-plugin-prettier": "^5.4.0",
 		"gsap": "^3.13.0",
